--- a/app/src/main/res/layout/fragment_current_request_waiting_view.xml
+++ b/app/src/main/res/layout/fragment_current_request_waiting_view.xml
@@ -35,14 +35,14 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.8" />
+        app:layout_constraintVertical_bias="0.75" />
 
     <TextView
         android:id="@+id/textViewCurrentRequestWaitingSubtext"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginStart="16dp"
         android:text="MIN AWAY"
         android:textAppearance="@android:style/TextAppearance.Medium"
         android:textColor="@color/colorGrey3"
@@ -53,12 +53,13 @@
 
     <TextView
         android:id="@+id/textViewCurrentRequestWaitingFootnote"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
-        android:layout_marginEnd="32dp"
-        android:layout_marginStart="32dp"
-        android:text="Switching to map view when volunteer shares their location"
+        android:layout_marginEnd="16dp"
+        android:layout_marginStart="16dp"
+        android:gravity="center"
+        android:text="Switching to map view when volunteer shares location."
         android:textColor="@color/colorGrey4"
         android:textSize="12sp"
         app:layout_constraintBottom_toBottomOf="parent"
