--- a/app/src/main/res/layout/activity_add_request.xml
+++ b/app/src/main/res/layout/activity_add_request.xml
@@ -76,7 +76,7 @@
         android:layout_marginEnd="12dp"
         android:layout_marginStart="12dp"
         android:enabled="false"
-        android:text="NEXT"
+        android:text="Next"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
@@ -89,7 +89,7 @@
         android:layout_marginBottom="4dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="12dp"
-        android:text="EDIT"
+        android:text="Edit"
         app:strokeColor="@color/colorAccent"
         app:strokeWidth="2dp"
         android:visibility="invisible"
@@ -105,7 +105,7 @@
         android:layout_marginBottom="4dp"
         android:layout_marginEnd="12dp"
         android:layout_marginStart="8dp"
-        android:text="REQUEST"
+        android:text="Request"
         android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
