--- a/app/src/main/res/menu/menu_volunteer_main_request_list.xml
+++ b/app/src/main/res/menu/menu_volunteer_main_request_list.xml
@@ -11,16 +11,9 @@
         app:showAsAction="ifRoom" />
 
     <item
-        android:id="@+id/actionMapView"
+        android:id="@+id/actionChangeView"
         android:icon="@drawable/ic_menu_map"
         android:orderInCategory="2"
-        android:title="action map view"
-        app:showAsAction="ifRoom" />
-
-    <item
-        android:id="@+id/actionListView"
-        android:icon="@drawable/ic_menu_list"
-        android:orderInCategory="2"
-        android:title="action list view"
-        app:showAsAction="ifRoom" />
+        android:title="action change view"
+        app:showAsAction="always" />
 </menu>
